# RVVP

./: .gitignore  CHANGELOG.md
sw/basic-c/: main.c
vp/src/core/common/: clint.h  clint_if.h  instr.cpp  instr.h  irq_if.h  mmu.h  mmu_mem_if.h  protected_access.h  real_clint.cpp  real_clint.h  smpu.h  smpu_mem_if.h  spmp.h  spmp_mem_if.h  trap.h
vp/src/core/rv32/: config.h  csr-names.h  csr.h  imsic-if.h  imsic-mem.h  irq-helpers.h  irq-prio.h  iss.cpp  iss.h  mem.h  mem_if.h  smpu.h  spmp.h  syscall.cpp  syscall.h  trap-codes.h
vp/src/core/rv64/: csr.h  iss.cpp  iss.h  trap-codes.h
vp/src/platform/: CMakeLists.txt
vp/src/platform/basic/: main.cpp
vp/src/platform/common/: CMakeLists.txt  aplic.cpp  aplic.h  fu540_plic.cpp  options.cpp  options.h
vp/src/util/: memory_map.h
